Add database creator class